--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "ethereum-marketplace",
+  "name": "marketplace-eth",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,15 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.3",
+    "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "eslint": "7",
-    "eslint-config-next": "12.0.3",
-    "postcss": "^8.3.11",
-    "tailwindcss": "^2.2.19"
+    "autoprefixer": "^10.3.3",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.0",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.8"
   }
 }
