--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "web3": "^1.6.0"
+    "swr": "^1.0.0",
+    "web3": "^1.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.3",
